--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -29,6 +29,12 @@ body {
   padding: 20px;
   background-color: #efecec;
 }
+.container2 {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
 .form-control {
   margin-bottom: 20px;
 }
@@ -53,6 +59,7 @@ body {
   border: 1px solid #ccc;
   resize: vertical;
 }
+
 .submit-btn {
   background-color: #007bff;
   color: #fff;
