--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -20,15 +20,17 @@
   background-color: #fff5ed;
 } */
 
-body {
+/* body {
   font-family: "Poppins", sans-serif;
-}
+} */
 .container {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
   background-color: #efecec;
+  font-family: "Roboto", sans-serif;
 }
+
 .container2 {
   max-width: 600px;
   margin: 0 auto;
